--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,14 +1,21 @@
-    <div class="menu">
-      <div class="menu-icon">+</div>
-      <nav>
-        <ul>
-{% for page in site.pages %}
-  {% case page.layout %}
-          {% when 'standard' %}<li><a href="{{ site.baseurl }}{{ page.url }}"><span class="bullet">»</span>{{ page.title }}</a></li>
-          {% when 'portfolio' %}<li><a href="{{ site.baseurl }}{{ page.url }}"><span class="bullet">»</span>{{ page.title }}</a></li>
-  {% endcase %}
-{% endfor %}
-          {% if site.github %}<li><a href="https://github.com/{{ site.github }}/"><span class="bullet">»<svg><use xlink:href="#icon-github"/></svg></span></a></li>{% endif %}
-        </ul>
-      </nav>
-    </div>
+{%- capture menu-links -%}
+  {%- for page in site.pages -%}
+    {%- case page.layout -%}
+      {%- when 'standard' -%}
+        <li><a href="{{ site.baseurl }}{{ page.url }}"><span class="bullet">»</span>{{ page.title }}</a></li>
+      {%- when 'portfolio' -%}
+        <li><a href="{{ site.baseurl }}{{ page.url }}"><span class="bullet">»</span>{{ page.title }}</a></li>
+    {%- endcase -%}
+  {%- endfor -%}
+  {%- if site.github -%}
+    <li><a href="https://github.com/{{ site.github }}/"><span class="bullet">»<svg><use xlink:href="#icon-github"/></svg></span></a></li>
+  {%- endif -%}
+{%- endcapture -%}
+        <div class="menu">
+            <div class="menu-icon">+</div>
+            <nav>
+                <ul>
+                {{ menu-links }}
+                </ul>
+            </nav>
+        </div>
