add cv structured data

--- a/_layouts/standard.html
+++ b/_layouts/standard.html
@@ -90,6 +90,7 @@
                         </section>
                 {%- endcase -%}
             {%- endfor -%}
+{%- include cv_structured_data.html -%}
         {%- endunless -%}
     </main>
 {%- include after_main.html -%}
