add missing colon

--- a/_includes/cv_structured_data.html
+++ b/_includes/cv_structured_data.html
@@ -16,7 +16,7 @@
     "text": "{{ content }}",
     "description": "{{ description }}",
     "name": "{{ site.first_name | append: ' '  }}{{ site.last_name | append: ' | ' }}{{ page.title }}",
-    "url": "{{ site.url | append '/cv.html' }}",
+    "url": "{{ site.url | append: '/cv.html' }}",
     "dateModified": "{{ site.time }}"
 }
 </script>
