improve liquid tags

--- a/_includes/cv_structured_data.html
+++ b/_includes/cv_structured_data.html
@@ -13,10 +13,10 @@
         "sameAs": "{{ site.github | prepend: 'https://github.com/' }}"
     },
     "inLanguage": "{{ site.language }}",
-    "text": "{{ content }}",
-    "description": "{{ description }}",
+    "text": "{{ content | strip_html}}",
+    "description": "{{ page.description }}",
     "name": "{{ site.first_name | append: ' '  }}{{ site.last_name | append: ' | ' }}{{ page.title }}",
-    "url": "{{ site.url | append: '/cv.html' }}",
+    "url": "{{ site.url }}{% link cv.md %}",
     "dateModified": "{{ site.time }}"
 }
 </script>
