remove whitespace control from include tags

--- a/_includes/before_main.html
+++ b/_includes/before_main.html
@@ -30,7 +30,7 @@
 {{ meta-robots }}
 </head>
 <body>
-{%- include icons.svg -%}
+{% include icons.svg %}
     <header>
-{%- include menu.html -%}
+{% include menu.html %}
     </header>
