--- a/_includes/before_main.html
+++ b/_includes/before_main.html
@@ -26,7 +26,7 @@
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
-    <link rel="shortcut icon" href="{%- include favicon.html -%}"/>
+    <link rel="shortcut icon" href="{% include favicon.html %}"/>
 {{ meta-robots }}
 </head>
 <body>
