--- a/_sass/_portfolio.scss
+++ b/_sass/_portfolio.scss
@@ -54,14 +54,12 @@
         }
 
         svg {
-            width: 1em;
-            height: 1em;
             @supports (fill: white) {
                 fill: white
             }
         }
 
-        .hide-text {
+        :not(h2) {
             display: none;
         }
 
@@ -88,7 +86,7 @@
                 font-size: $golden-ratio-1;
             }
 
-            .hide-text {
+            :not(h2) {
                 display: initial;
             }
         }
@@ -104,5 +102,151 @@
             rgba(0, 0, 0, 0.85),
             rgba(0, 0, 0, 0.85)
             );
+    }
+}
+
+.portfolio2 {
+    max-width: $max-content-width;
+
+    article {
+        height: $golden-ratio-10;
+        transition: height $transition-effect, filter $transition-effect;
+        overflow: hidden;
+        position: relative;
+        padding: 1em;
+        background: {
+            size: cover;
+            position: center top;
+        }
+
+        h3,
+        p {
+            margin: 0;
+            color: white;
+        }
+
+        h2 {
+            font-size: $golden-ratio-1;
+            background-color: black;
+            color: white;
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            z-index: 1;
+            text-decoration: none;
+            text-align: right;
+            transition: display $transition-effect;
+
+            a {
+                text-decoration: none;
+                border: none;
+            }
+        }
+
+        h3 {
+            font-size: 1.3em;
+            line-height: 2em;
+            padding: 0;
+            
+            &:before {
+                content: "\00BB";
+                padding-left: 0.25em;
+                padding-right: 0.25em;
+            }
+        }
+
+        p {
+            font-size: 1em;
+            padding: 0.5em;
+        }
+
+        svg {
+            @supports (fill: white) {
+                fill: white
+            }
+        }
+
+        :not(h2) {
+            display: none;
+        }
+
+        &:hover,
+        &:focus {
+            height: initial;
+            min-height: $golden-ratio-10;
+            filter: grayscale(100%) brightness(50%);
+        
+            .portfolio-item-overlay {
+                opacity: 1;
+            }
+
+            h2 {
+                background-color: initial;
+                position: initial;
+                bottom: initial;
+                right: initial;
+                z-index: initial;
+                text-decoration: initial;
+                text-align: initial;
+                margin: 0;
+                padding: 0;
+                font-size: $golden-ratio-1;
+            }
+
+            :not(h2) {
+                display: initial;
+            }
+        }
+    }
+
+    .portfolio-item-overlay {
+        opacity: 0;
+        width: 100%;
+        height: 100%;
+        transition: opacity $transition-effect;
+        background-image: 
+            linear-gradient(
+            rgba(0, 0, 0, 0.85),
+            rgba(0, 0, 0, 0.85)
+            );
+    }
+
+    div.test {
+        height: $golden-ratio-10;
+        width: 100%;
+
+        img {
+            height: $golden-ratio-10;
+            width: 100%;
+        }
+
+        .caption {
+                font-size: $golden-ratio-1;
+                background-color: black;
+                color: white;
+    /*            position: absolute; */
+                bottom: 0;
+    /*            right: 0; */
+    /*            z-index: 1; */
+                text-decoration: none;
+                text-align: right;
+    /*            transition: display $transition-effect; */
+        }
+
+        div.text {
+            display: none;
+        }
+
+        &:hover {
+            height: auto;
+
+            div.text {
+            display: initial;
+            }
+
+            .caption {
+                display: none;
+            }
+        }
     }
 }
