--- a/_sass/_portfolio.scss
+++ b/_sass/_portfolio.scss
@@ -2,37 +2,37 @@
     max-width: $max-content-width;
 
     article {
-        height: $golden-ratio-10;
-        transition: height $transition-effect, filter $transition-effect;
-        overflow: hidden;
-        position: relative;
-        padding: 1em;
         background: {
             size: cover;
             position: center top;
         }
+        height: $golden-ratio-10;
+        overflow: hidden;
+        position: relative;
+        padding: 1em;
+        transition: height $transition-effect, filter $transition-effect;
 
         h3,
         p {
-            margin: 0;
             color: white;
+            margin: 0;
         }
 
         h2 {
-            font-size: $golden-ratio-1;
+            bottom: 0;
             background-color: black;
             color: white;
+            font-size: $golden-ratio-1;
             position: absolute;
-            bottom: 0;
             right: 0;
-            z-index: 1;
             text-decoration: none;
             text-align: right;
             transition: display $transition-effect;
+            z-index: 1;
 
             a {
-                text-decoration: none;
                 border: none;
+                text-decoration: none;
             }
         }
 
@@ -65,9 +65,9 @@
 
         &:hover,
         &:focus {
+            filter: grayscale(100%) brightness(50%);
             height: initial;
             min-height: $golden-ratio-10;
-            filter: grayscale(100%) brightness(50%);
         
             .portfolio-item-overlay {
                 opacity: 1;
@@ -75,15 +75,15 @@
 
             h2 {
                 background-color: initial;
-                position: initial;
                 bottom: initial;
-                right: initial;
-                z-index: initial;
-                text-decoration: initial;
-                text-align: initial;
+                font-size: $golden-ratio-1;
                 margin: 0;
                 padding: 0;
-                font-size: $golden-ratio-1;
+                position: initial;
+                right: initial;
+                text-align: initial;
+                text-decoration: initial;
+                z-index: initial;
             }
 
             :not(h2) {
@@ -93,18 +93,19 @@
     }
 
     .portfolio-item-overlay {
-        opacity: 0;
-        width: 100%;
-        height: 100%;
-        transition: opacity $transition-effect;
         background-image: 
             linear-gradient(
             rgba(0, 0, 0, 0.85),
             rgba(0, 0, 0, 0.85)
             );
+        height: 100%;
+        opacity: 0;
+        transition: opacity $transition-effect;
+        width: 100%;
     }
 }
 
+/*
 .portfolio2 {
     max-width: $max-content-width;
 
@@ -224,13 +225,9 @@
                 font-size: $golden-ratio-1;
                 background-color: black;
                 color: white;
-    /*            position: absolute; */
                 bottom: 0;
-    /*            right: 0; */
-    /*            z-index: 1; */
                 text-decoration: none;
                 text-align: right;
-    /*            transition: display $transition-effect; */
         }
 
         div.text {
@@ -250,3 +247,4 @@
         }
     }
 }
+*/
