switch to layout inheritence system

--- a/_layouts/error.html
+++ b/_layouts/error.html
@@ -1,5 +1,6 @@
-{% include before_main.html %}
+---
+layout: master
+---
     <main>
         {{ content }}
     </main>
-{% include after_main.html %}
