add web app manifest

--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -19,6 +19,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
     <link rel="shortcut icon" href="{% include favicon.html %}"/>
+    <link rel="manifest" href="/manifest.json">
     {{ meta-robots }}
 </head>
 <body>
