--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -17,10 +17,11 @@
     <meta name="description" content="{{ page.description }}">
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    {{ meta-robots }}
+    <meta name="theme-color" content="{{ site.pattern-background }}">
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
     <link rel="shortcut icon" href="{% include favicon.html %}"/>
     <link rel="manifest" href="/manifest.json">
-    {{ meta-robots }}
 </head>
 <body>
 {% include icons.svg %}
