--- a/_sass/_media-queries.scss
+++ b/_sass/_media-queries.scss
@@ -1,32 +1,20 @@
 body {
     font-size: $font-size-small;
+    min-height: 100vh;
 }
-/*
-.portfolio-item:hover {
-        height: 35em;
-}
-*/
+
 @media only screen and (min-width: $screen-small + 1) {
     body {
         font-size: $font-size-medium;
     }
-/*
-    .portfolio-item:hover {
-        height: 37em;
-    }
-*/
 }
 
 @media only screen and (min-width: $screen-medium + 1) {
     body {
         font-size: $font-size-large;
         padding: $golden-ratio-3;
+        min-height: unset;
     }
-/*
-    .portfolio-item:hover {
-        height: 24.27em;
-    }
-*/
 }
 
 @media screen and (min-width: 955px) {
