--- a/css/styles.scss
+++ b/css/styles.scss
@@ -49,7 +49,7 @@ $decoration-thickness: 1px;
 
 // Portfolio setup
 $transition-effect: 0.3s ease-in-out;
-$portfolio-text-color: white;
+$portfolio-text-color: black;
 @import 'portfolio';
 
 // Media queries
